Wed Aug  6 22:23:41 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): If display_to_stdout is set, assert that
	  man_file is non-NULL; all the stray-cat code paths ensure that
	  neither troff nor recode is set by this point (Coverity CID #5).

Wed Aug  6 21:40:37 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (manopt_to_env): Duplicate options assigned to elements
	  of argv, and free the copy of manopt before returning. This isn't
	  really a bug as such, but it appeases Coverity CID #22.

Thu Jul 31 02:10:06 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (get_section_list): Fix leak of get_sections return
	  value if the configuration file contains no SECTIONS directives
	  (Coverity CID #21).

Thu Jul 31 02:03:46 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (try_section): Free info and info_buffer if there is a
	  failure before adding a candidate (Coverity CID #24).

Thu Jul 31 01:41:17 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (add_nls_manpath): Copy manpathlist to omanpathlist
	  after the initial locale checks, to avoid memory leaks (Coverity
	  CID #20).
	  (get_manpath): Free return value of add_system_manpath (Coverity
	  CID #18) and guess_manpath (Coverity CID #19) when they're simply
	  interpolated into another string.

Thu Jul 31 01:18:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Check for failure to open the preformatted
	  cat file (Coverity CID #14).

Thu Jul 31 01:01:13 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/util.c (lang_dir): Free ld if returning xstrdup ("C") instead
	  (Coverity CID #17).

Thu Jul 31 00:55:36 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pathsearch.c (pathsearch): Free path if returning early due to
	  being given a qualified name (Coverity CID #16).

Thu Jul 31 00:51:58 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_pump): Free known_source before returning