@@ -1,3 +1,13 @@
+Wed Aug  6 22:36:48 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_lookup.c (infoalloc): Move to ...
+	* libdb/db_storage.h (infoalloc): ... here (as inline function).
+	  Include "xalloc.h" for this.
+	  (dblookup_all, dblookup_exact, gripe_lock, gripe_corrupt_data):
+	  Stop declaring inline.
+	* src/security.h (drop_effective_privs, regain_effective_privs):
+	  Stop declaring inline.
+
 Wed Aug  6 22:23:41 BST 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (display): If display_to_stdout is set, assert that
